--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
 <div class="title">
     <h1 class="title-text">Music Genre Classification</h1>
+    <p class="class-info">Northwestern University, EECS 352</p>
+    <p class="class-info">Professor Bryan Pardo</p>
 </div>
 
 <div class="content">
     <h2>Unstyled sample header</h2>
     <p>Unstyled paragraph text.</p>
 </div>
-
+    
 <div class="footer">
     <div style="text-align: center;">Email us:</div>
     <div class="container">
