--- a/results.html
+++ b/results.html
@@ -15,6 +15,8 @@
 
 <div class="title">
     <h1 class="title-text">Music Genre Classification</h1>
+    <p class="class-info">Northwestern University, EECS 352</p>
+    <p class="class-info">Professor Bryan Pardo</p>
 </div>
 
 <div class="content">
