Added preliminary content for index.html; homepage

--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
 </div>
 
 <div class="content">
-    <h2>Unstyled sample header</h2>
-    <p>Unstyled paragraph text.</p>
+    <h2>Introduction</h2>
+    <p>
+        An interesting niche in music information retrieval has been done classifying music genres using song spectrograms. Some of the different approaches use some sort of CNN to convert the spectrogram to a vector representation with different higher-level layers to extract more meaningful results. 
+    </p>
+
+    <p>
+        We will also build a decision tree trained on several features in order to investigate how the CNN is classifying genres and to compare the results. We want to use these techniques of genre classification and the REPET algorithm to create and classify cross-mixed songs in order to discover which aspects of a song are more strongly correlated with particular genres.
+    </p>
+
+    <p>
+        Music genre classification is an interesting task because of its value to music information retrieval and audio signal processing. In the past couple years, sequential learning has rapidly improved via attention layers. Our goal is to build off of the previous neural network models by introducing these attention layers to try to improve the temporal dimension of the data, while simultaneously understanding how we got the results we did. 
+    </p>
 </div>
     
 <div class="footer">
